--- a/package.json
+++ b/package.json
@@ -14,15 +14,24 @@
     "lint": "eslint . --ext .js,.ts"
   },
   "dependencies": {
-    "@prisma/client": "^5.5.2",
+    "@prisma/client": "^5.17.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.12",
     "express": "^4.18.2",
+    "express-session": "^1.18.0",
+    "jsonwebtoken": "^9.0.2",
     "libphonenumber-js": "^1.10.48",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "prisma": "^5.3.1",
+    "passport": "^0.7.0",
+    "passport-auth-token": "^1.0.1",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0",
+    "passport-openidconnect": "^0.1.2",
+    "prisma": "^5.17.0",
     "zod": "^3.23.0-canary.20230815T194608"
   },
   "babel": {
@@ -37,9 +46,13 @@
     "@types/body-parser": "^1.19.3",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/lodash": "^4.14.200",
     "@types/morgan": "^1.9.5",
     "@types/node": "^20.6.2",
+    "@types/passport": "^1.0.16",
+    "@types/passport-jwt": "^4.0.1",
+    "@types/passport-local": "^1.0.38",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
     "eslint": "^8.49.0",
