--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@types/morgan": "^1.9.5",
     "@types/node": "^20.6.2",
     "@types/passport": "^1.0.16",
+    "@types/passport-auth-token": "^1.0.4",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
